--- a/src/posts/admin/templates/sqladmin/edit-post.html
+++ b/src/posts/admin/templates/sqladmin/edit-post.html
@@ -7,9 +7,6 @@
       <h3 class="card-title">Edit {{ model_view.name }}</h3>
     </div>
     <div class="card-body border-bottom py-3">
-
-
-
         <style>
           .tag{
             display: inline-block;
@@ -64,6 +61,18 @@
               function addTag(){
                 tagId = document.querySelector("select[name=tags]").value
                 tagName = document.querySelector("select[name=tags]").selectedOptions[0].text
+                postId = {{ obj.id }};
+                console.log(tagId, postId)
+                newTag = document.createElement("div")
+                newTag.setAttribute("data-id", tagId);
+                newTag.classList.add("tag")
+                newTag.innerHTML = `${ tagName }<span class="tag-remove" onclick="deleteTag(${postId}, ${tagId}, this)">&times;</span>`;
+                document.querySelector(".tags-wrapper").prepend(newTag);
+              }
+
+
+                /*tagId = document.querySelector("select[name=tags]").value
+                tagName = document.querySelector("select[name=tags]").selectedOptions[0].text
                 postId = {{ obj.id}}
                 console.log(tagId, postId)
                 fetch(`/tags/add-to-post?tag_id=${tagId}&post_id=${postId}`, {
@@ -76,8 +85,7 @@
             <span class="tag-remove" onclick="deleteTag(${postId}, ${tagId}, this)">&times;</span>`;
                     document.querySelector(".tags-wrapper").prepend(newTag);
                   }
-                })
-              }
+                })*/
 
               function fetchTags(){
                 fetch("/tags/all").then(response => {
@@ -93,17 +101,20 @@
 
               fetchTags()
               function deleteTag(postId, tagId, elem){
-                fetch(`/tags/delete-relation?post_id=${postId}&tag_id=${tagId}`, {
+                /*fetch(`/tags/delete-relation?post_id=${postId}&tag_id=${tagId}`, {
                   method: "DELETE"
                 }).then(response => {
                   if (response.ok){
                     elem.parentElement.remove()
                   }
-                })
+                })*/
+
+
+                elem.parentElement.remove()
               }
               </script>
           {% for tag in obj.tags %}
-          <div class="tag">
+          <div class="tag" data-id="{{ tag.id }}">
             {{ tag.name }}
             <span class="tag-remove" onclick="deleteTag({{obj.id}}, {{tag.id}}, this)">&times;</span>
           </div>
@@ -143,6 +154,23 @@
             </div>
           </div>
         </div>
+
+
+        <script>
+          document.querySelector('form').addEventListener('submit', function (e) {
+            const input = document.createElement('input');
+            input.type = 'hidden';
+            input.name = 'tags';
+            const tags = []
+            for (let tag of document.querySelectorAll(".tag")){
+              const tagId = tag.getAttribute("data-id");
+              tags.push(tagId)
+            }
+            input.value = tags.join();
+            e.target.appendChild(input);
+          });
+          </script>
+
       </form>
     </div>
   </div>
